prevent prep time, cook time and serving suggestion from wrapping

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -53,3 +53,7 @@ body{
 .p-10{
     padding:4rem 6rem;
 }
+
+.nobr{
+    white-space: nowrap;
+}
